--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
 <body>
     <div class="grid-container">
-        <div class="first-item">first-item</div>
-        <div class="second-item">second-item</div>
-        <div class="third-item">third-item</div>
+        <div class="first-item">header</div>
+        <div class="second-item">leftNav</div>
+        <div class="third-item">main</div>
     </div>
 </body>
 
